--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
+    "lucide": "^0.514.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
