--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,24 +5,31 @@
   "scripts": {
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "check-types": "tsc --noEmit",
-    "clean": "rm -rf ./dist ./node_modules/ ./.turbo/",
+    "clean": "rm -rf ./dist ./node_modules/ ./.turbo/ ./src/db/migrations/",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' -r tsconfig-paths/register src/index.ts",
     "format": "prettier --write . --ignore-path ./.gitignore",
     "lint": "eslint .",
+    "migrate": "pnpm exec drizzle-kit generate --config ./drizzleconfig.ts",
     "start": "node dist/server.js",
     "update": "pnpm update --latest"
   },
   "dependencies": {
+    "@hono/node-server": "^1.14.4",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "hono": "^4.7.11",
+    "pg": "^8.16.0",
+    "pino": "^9.7.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.2",
-    "@types/node": "^22.15.19",
+    "@types/node": "^24.0.1",
+    "@types/pg": "^8.15.4",
     "@workspace/eslint": "workspace:*",
     "@workspace/prettier": "workspace:*",
     "@workspace/typescript": "workspace:*",
+    "drizzle-kit": "^0.31.1",
+    "drizzle-orm": "^0.44.2",
     "nodemon": "^3.1.10",
+    "pino-pretty": "^13.0.0",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0"
