--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "turbo dev",
     "format": "turbo format",
     "lint": "eslint . && turbo lint",
+    "migrate": "turbo migrate",
     "update": "turbo update",
     "setup": "pnpm run clean && rm -rf pnpm-lock.yaml && pnpm install && pnpm run format && pnpm run lint && pnpm run check-types && pnpm run build && pnpm run dev",
     "setup:update": "pnpm run clean && rm -rf pnpm-lock.yaml && pnpm install && pnpm run update && pnpm run clean && rm -rf pnpm-lock.yaml && pnpm install && pnpm run format && pnpm run lint && pnpm run check-types && pnpm run build && pnpm run dev"
