--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "@config/*": ["./src/config/*"]
+      "@lib/*": ["src/lib/*"],
+			"@db/*": ["src/db/*"]
     },
     "outDir": "./dist"
   },
