feat(env): Added env validation and env example for db.
- Added env example variables for the database

- Added a validation function that will check if one of the env
  variables is null or empty

- Moved 'env.ts' to 'src/env.ts'

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,4 +1,13 @@
+# Server
 SERVER_URL=http://localhost:3001
 PORT=3001
 
+# Environment
 NODE_ENV=development
+
+# PostgreSQL Database configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=postgresdb
