--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -20,7 +20,8 @@
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@types/node": "^22.15.19",
