--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,7 +6,7 @@
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "check-types": "tsc --noEmit",
     "clean": "rm -rf ./dist ./node_modules/ ./.turbo/ ./src/db/migrations/",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' -r tsconfig-paths/register src/index.ts",
+    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"npx ts-node\" -r tsconfig-paths/register src/index.ts",
     "format": "prettier --write . --ignore-path ./.gitignore",
     "lint": "eslint .",
     "migrate": "pnpm exec drizzle-kit generate --config ./drizzleconfig.ts",
